After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 657243 - g_cancellable_set_error_if_cancelled() documentation
g_cancellable_set_error_if_cancelled() documentation
Status: RESOLVED FIXED
Product: glib
Classification: Platform
Component: gio
unspecified
Other All
: Normal trivial
: ---
Assigned To: gtkdev
gtkdev
Depends on:
Blocks:
 
 
Reported: 2011-08-24 13:41 UTC by Matthew Bucknall
Modified: 2011-08-25 18:24 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
GCancellable: Small annotation additions (2.05 KB, patch)
2011-08-25 01:25 UTC, Matthias Clasen
reviewed Details | Review

Description Matthew Bucknall 2011-08-24 13:41:59 UTC
Might be worth pointing out in GIO's reference manual that passing NULL to g_cancellable_set_error_if_cancelled()'s 'cancellable' argument is valid usage.
Comment 1 Matthias Clasen 2011-08-25 01:25:55 UTC
The following fix has been pushed:
471593e GCancellable: Small annotation additions
Comment 2 Matthias Clasen 2011-08-25 01:25:58 UTC
Created attachment 194663 [details] [review]
GCancellable: Small annotation additions
Comment 3 Colin Walters 2011-08-25 18:24:38 UTC
Review of attachment 194663 [details] [review]:

::: gio/gcancellable.c
@@ +292,3 @@
+ *
+ * Returns: %TRUE if @cancellable is cancelled,
+ * FALSE if called with %NULL or if item is not cancelled.

It'll make the doc parser happier if there's a space on this second line so it's more obvious it's part of Returns:.