GCancellable: Small annotation additions

https://bugzilla.gnome.org/show_bug.cgi?id=657243